Modificaciones en el formulario principal de curriculum, trabajador-detaller y clases nuevas css

--- a/css/core.css
+++ b/css/core.css
@@ -9678,6 +9678,24 @@ a.text-grey:hover .underline {
 
 
 /* =================================================================
+  Seccion Trabajador Detalle
+================================================================= */
+
+.border-nav>li:not(:last-child) {
+    border-right: 1px solid #3e70c9;
+}
+
+
+/* =================================================================
+  Seccion Curriculum
+================================================================= */
+
+.select-date {
+    width: 96px;
+}
+
+
+/* =================================================================
   Clases modificadas de Bootstrap
 ================================================================= */
 
