--- a/css/core.css
+++ b/css/core.css
@@ -9741,6 +9741,32 @@ a.text-grey:hover .underline {
 
 
 /* =================================================================
+  Seccion Empleos-Detalles
+================================================================= */
+
+.socialLinks {
+    margin-top: 20px;
+}
+
+.icon-medal {
+    float: right;
+    font-size: 35px;
+}
+
+.content-btn-postulate {
+    padding-top: 20px;
+    border-top: 1px solid black;
+    padding-bottom: 10px;
+    /* margin-top: 20px; */
+}
+
+.container-resp {
+    padding-right: 0px;
+    padding-left: 0px;
+}
+
+
+/* =================================================================
   Clases modificadas de Bootstrap
 ================================================================= */
 
@@ -9820,14 +9846,65 @@ a.text-grey:hover .underline {
     .pub {
         height: inherit !important;
     }
-    /* DataTables */
-    /* table.dataTable thead th.sorting:after,
-    table.dataTable thead th.sorting_asc:after,
-    table.dataTable thead th.sorting_desc:after {
-        position: absolute;
-        top: 28px;
-        right: 8px;
-        display: block;
-        font-family: 'FontAwesome';
-    } */
+}
+
+
+/** Social Button CSS **/
+
+.share-btn {
+    display: inline-block;
+    color: #ffffff;
+    border: none;
+    padding: 0.5em;
+    width: 10em;
+    box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.2);
+    outline: none;
+    text-align: center;
+    border-radius: 4px;
+    font-size: 12px;
+    margin-bottom: 5px;
+}
+
+.share-btn:hover {
+    color: #eeeeee;
+}
+
+.share-btn:active {
+    position: relative;
+    top: 2px;
+    box-shadow: none;
+    color: #e2e2e2;
+    outline: none;
+}
+
+.share-btn.twitter {
+    background: #55acee;
+}
+
+.share-btn.google-plus {
+    background: #dd4b39;
+}
+
+.share-btn.facebook {
+    background: #3B5998;
+}
+
+.share-btn.instagram {
+    background: #bc2a8d
+}
+
+.share-btn.stumbleupon {
+    background: #EB4823;
+}
+
+.share-btn.reddit {
+    background: #ff5700;
+}
+
+.share-btn.linkedin {
+    background: #4875B4;
+}
+
+.share-btn.email {
+    background: #444444;
 }
