--- a/css/core.css
+++ b/css/core.css
@@ -134,7 +134,9 @@ a:active {
     margin-top: 71px;
     width: 220px !important;
     background-color: #212330;
-    box-shadow: -5px 1px 40px rgba(0, 0, 0, 0.1);
+    border: 1px solid #DFDFDF;
+    border-top: none;
+    /* box-shadow: -5px 1px 40px rgba(0, 0, 0, 0.1); */
 }
 
 
@@ -9671,6 +9673,10 @@ a.text-grey:hover .underline {
     padding: 10px 0px;
 }
 
+.icon-free {
+    color: #43B968;
+}
+
 
 /* =================================================================
   INDEX
@@ -9693,6 +9699,12 @@ a.text-grey:hover .underline {
 .gold {
     background-color: rgba(153, 114, 0, 0.4) !important;
     border: 2px solid #997200;
+}
+
+.h6-login-empresas {
+    color: #000;
+    font-weight: bolder;
+    margin-top: 20px;
 }
 
 
