Ajuste en la imagen de cada post de noticias y nueva clase css. Pequeño ajuste en el contenido de planes.

--- a/css/core.css
+++ b/css/core.css
@@ -10002,6 +10002,22 @@ a.text-grey:hover .underline {
 
 
 /* =================================================================
+  Seccion Noticias
+================================================================= */
+
+.news-img {
+    float: left;
+    margin: 20px 35px 20px 17px;
+}
+
+@media (max-width: 768px) {
+    .news-img {
+        margin-left: 0px;
+    }
+}
+
+
+/* =================================================================
   Clases modificadas de Bootstrap
 ================================================================= */
 
