--- a/css/core.css
+++ b/css/core.css
@@ -1007,25 +1007,29 @@ a:active {
 
 .template-options .to-toggle {
     position: absolute;
-    top: 200px;
-    left: -45px;
-    width: 45px;
+    top: 89vh;
+    right: 42ch;
+    width: 110px;
     height: 45px;
-    line-height: 47px;
+    line-height: 35px;
     background-color: #fff;
-    font-size: 1.1rem;
-    color: #999;
+    font-size: 18px;
+    color: #00AEEF;
+    font-weight: bolder;
     text-align: center;
+    vertical-align: middle;
     cursor: pointer;
-    border: 1px solid rgba(0, 0, 0, 0.125);
-    border-right: none;
-    box-shadow: -10px 0 30px rgba(0, 0, 0, 0.05);
+    border-radius: 0.25rem;
+    border-top: 5px solid #2E3192;
+    border-bottom: 5px solid #2E3192;
+    border-left: 2px solid #2E3192;
+    border-right: 2px solid #2E3192;
     -webkit-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
 }
 
 .template-options .to-toggle:hover {
-    color: #3e70c9;
+    color: #B2B3B4;
 }
 
 
@@ -10158,4 +10162,38 @@ a.text-grey:hover .underline {
 
 .share-btn.email {
     background: #444444;
+}
+
+
+/*
+  	Flaticon icon font: Flaticon
+  	Creation date: 27/12/2017 13:42
+  	*/
+
+@font-face {
+    font-family: "Flaticon";
+    src: url("Flaticon.eot");
+    src: url("../img/flaticon/Flaticon.eot?#iefix") format("embedded-opentype"), url("../img/flaticon/Flaticon.woff") format("woff"), url("../img/flaticon/Flaticon.ttf") format("truetype"), url("../img/flaticon/Flaticon.svg#Flaticon") format("svg");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+    @font-face {
+        font-family: "Flaticon";
+        src: url("../img/flaticon/Flaticon.svg#Flaticon") format("svg");
+    }
+}
+
+[class^="flaticon-"]:before,
+[class*=" flaticon-"]:before,
+[class^="flaticon-"]:after,
+[class*=" flaticon-"]:after {
+    font-family: Flaticon;
+    font-style: normal;
+    margin-left: 20px;
+}
+
+.flaticon-mouse:before {
+    content: "\f100";
 }
