--- a/css/core.css
+++ b/css/core.css
@@ -9304,7 +9304,7 @@ a.text-grey:hover .underline {
     -moz-animation: fadeInUp 1s 1;
     -ms-animation: fadeInUp 1s 1;
     -o-animation: fadeInUp 1s 1;
-    animation: fadeInUp 1s 1;
+    animation: fadeInUp 3s 1;
 }
 
 @-webkit-keyframes fadeInBottom {
@@ -9656,6 +9656,12 @@ a.text-grey:hover .underline {
 
 .p-30 {
     padding: 30px;
+}
+
+@media (max-width: 768px) {
+    .img-fix-sm {
+        background-size: inherit;
+    }
 }
 
 
@@ -10051,6 +10057,98 @@ a.text-grey:hover .underline {
     position: fixed;
     width: 100%;
     top: 73px;
+}
+
+.padding-content {
+    padding-top: 55px;
+    padding-bottom: 55px;
+}
+
+
+/* =================================================================
+  LANDING EMPRESAS
+================================================================= */
+
+.overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #080d15;
+    opacity: .7;
+    top: 0px;
+}
+
+.margin-title-landing {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    text-align: center;
+}
+
+.carousel-indicators li {
+    background-color: rgba(0, 0, 0, 0);
+    border: 1px solid #929292 !important;
+}
+
+.main-title-landing {
+    background: -webkit-linear-gradient(#00aeef, #383B97);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: #383B97;
+    /* color: #00aeef; */
+    margin-top: 35vh;
+    text-align: center;
+    font-size: 80px;
+    /* text-shadow: #383B97 0px 3px, #383B97 3px 0px, #383B97 -3px 0px, #383B97 0px -3px, #383B97 -3px -3px, #383B97 3px 3px, #383B97 3px -3px, #383B97 -3px 3px; */
+}
+
+.main-title-landing2 {
+    color: #fff;
+    margin-top: 35vh;
+    text-align: center;
+    font-size: 80px;
+    font-weight: bolder;
+}
+
+@-webkit-keyframes hue {
+    from {
+        -webkit-filter: hue-rotate(0deg);
+    }
+    to {
+        -webkit-filter: hue-rotate(-360deg);
+    }
+}
+
+@media(max-width: 414px) {
+    .main-title-landing {
+        margin-top: 29vh;
+        font-size: 50px
+    }
+    .second-title-landing {
+        font-size: 25px !important;
+    }
+}
+
+.second-title-landing {
+    /* background: -webkit-linear-gradient(#00aeef, #383B97);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: #383B97; */
+    text-align: center;
+    color: #fff;
+    font-size: 35px;
+    /* text-shadow: #383B97 0px 2px, #383B97 2px 0px, #383B97 -2px 0px, #383B97 0px -2px, #383B97 -1.4px -1.4px, #383B97 1.4px 1.4px, #383B97 1.4px -1.4px, #383B97 -1.4px 1.4px; */
+}
+
+.carousel-indicators .active {
+    background-color: transparent !important;
+}
+
+#title-landing {
+    -webkit-animation-duration: 2s;
+    -moz-animation-duration: 2s;
+    -ms-animation-duration: 2s;
+    -o-animation-duration: 2s;
+    animation-duration: 2s;
 }
 
 
