--- a/css/core.css
+++ b/css/core.css
@@ -9956,6 +9956,12 @@ a.text-grey:hover .underline {
     border-bottom-right-radius: 16px;
 }
 
+.btn-postulado {
+    background-color: #2e3192 !important;
+    border-color: #2e3192 !important;
+    color: #fff;
+}
+
 .footer-free {
     background: rgba(18, 161, 230, 1);
     background: -moz-linear-gradient(left, rgba(18, 161, 230, 1) 0%, rgba(18, 161, 230, 1) 6%, rgba(46, 49, 146, 1) 94%, rgba(46, 49, 146, 1) 100%);
