Fix foto de perfil en empresas. Informacion de video en planes retirada

--- a/css/core.css
+++ b/css/core.css
@@ -10201,6 +10201,15 @@ a.list-group-item:hover {
 
 
 /* =================================================================
+  PERFIL EMPRESAS
+================================================================= */
+
+.block-pub {
+    padding-right: 0px !important;
+}
+
+
+/* =================================================================
   Clases modificadas de Bootstrap
 ================================================================= */
 
